--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,3 +57,19 @@ body {
   background-image: url("/images/bg-pattern.png");
   background-blend-mode: lighten;
 }
+@keyframes move-up-down {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-20px);
+  }
+}
+
+.animate-move {
+  animation: move-up-down 1.5s infinite ease-in-out;
+}
+
+.group-hover .animate-move {
+  animation-play-state: paused;
+}
