--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,12 +57,25 @@ body {
   background-image: url("/images/bg-pattern.png");
   background-blend-mode: lighten;
 }
+
 @keyframes move-up-down {
-  0%  {
+  0% {
     transform: translateY(0);
   }
+  20% {
+    transform: translateY(-30px);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-30px);
+  }
+  80% {
+    transform: translateY(-30px);
+  }
   100% {
-    transform: translateY(-20px);
+    transform: translateY(0px);
   }
 }
 
