--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,7 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: "yekanBakh", Arial, Helvetica, sans-serif;
+  overflow-x: hidden !important;
 }
 
 .text-section {
@@ -53,7 +54,7 @@ body {
   background-position: left -260px top 0;
 }
 .intro-section-image-left:hover {
-  background-position: left -160px top 0;
+  background-position: left -40px top 0;
 }
 .bg-pattern {
   background-image: url("/images/bg-pattern.png");
